IFS-1986 removed client side validation check as it was duplicated.

--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/admin/search-external-users.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/admin/search-external-users.html
@@ -31,8 +31,7 @@
                                    th:field="*{searchString}"
                                    id="searchString"
                                    name="searchString"
-                                   minlength="3"
-                                   required="required">
+                                   minlength="3">
                         </div>
                     </div>
                     <div class="column-half">
