IFS-1986 removed client side validation check as it was duplicated.

--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/admin/search-external-users.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/admin/search-external-users.html
@@ -30,8 +30,7 @@
                                    th:errorclass="form-control-error"
                                    th:field="*{searchString}"
                                    id="searchString"
-                                   name="searchString"
-                                   minlength="3">
+                                   name="searchString">
                         </div>
                     </div>
                     <div class="column-half">
