--- a/ifs-web-service/ifs-web-core/src/main/resources/static/sass/components/_forms.scss
+++ b/ifs-web-service/ifs-web-core/src/main/resources/static/sass/components/_forms.scss
@@ -422,7 +422,7 @@ td {
 
 .form-group {
   &.download {
-    padding: 5px 0 0 50px;
+    padding: 10px 0 10px 50px;
     background: url(../images/icons/icon-download.png) no-repeat;
   }
 }
