--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/finance/finance.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/finance/finance.html
@@ -511,6 +511,10 @@
                         <tr>
                             <td class="form-group download">
                                 <h3 class="heading-small no-margin">Download the overhead calculation spreadsheet</h3>
+                                <ul>
+                                    <li>Download as an Excel document <a href="/files/overheads.xlsx">overhead calculation spreadsheet.xlsx (16KB)</a></li>
+                                    <li>Download as an Open Office document <a href="/files/overheads.ods">overhead calculation spreadsheet.ods (10KB)</a></li>
+                                </ul>
                                 <a th:href="@{${'/application/download/overheadfile/'+overheadCosts?.id}}" th:text="${overheadCosts?.calculationFile?.get()?.name}">Overhead calculation spreadsheet.pdf</a>
                             </td>
                         </tr>
