--- a/ifs-web-service/ifs-web-core/src/main/resources/static/sass/prototype/_prototype-modifiers.scss
+++ b/ifs-web-service/ifs-web-core/src/main/resources/static/sass/prototype/_prototype-modifiers.scss
@@ -56,6 +56,12 @@
   .question.extra-margin{
     margin-top: 30px;
   }
+
+  .question{
+    small{
+      margin-bottom: 0;
+    }
+  }
 }
 
 /*--- Borders ---*/
