--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/fragments/external-users.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/fragments/external-users.html
@@ -7,7 +7,8 @@
 </th:block>
 
 <th:block th:fragment="users-table(users)">
-    <div class="table-overflow">
+    <p th:if="${#lists.isEmpty(users)}">There are no results for this search.</p>
+    <div class="table-overflow" th:unless="${#lists.isEmpty(users)}">
         <table>
             <thead>
             <tr>
