--- a/ifs-web-service/ifs-web-core/src/main/resources/static/sass/components/_forms.scss
+++ b/ifs-web-service/ifs-web-core/src/main/resources/static/sass/components/_forms.scss
@@ -314,11 +314,15 @@ tr {
       padding: 0 10px 0 0;
     }
   }
+}
 
-  &.form-group-error {
-    .editor {
-      @include box-shadow(none);
-      border: 4px solid $error-colour;
+.form-group-error {
+  .textarea-wrapped {
+    [contenteditable="true"] {
+      &.editor {
+        @include box-shadow(none);
+        border: 4px solid $error-colour;
+      }
     }
   }
 }
