IFS-2324: Change content

--- a/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/competition-pending-spend-profiles.html
+++ b/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/competition-pending-spend-profiles.html
@@ -39,7 +39,7 @@
         </div>
     </th:block>
     <th:block th:unless="${model.pendingSpendProfiles.size() > 0}">
-        There are no outstanding Spend Profiles to generate.
+        There are no outstanding spend profiles to generate.
     </th:block>
     <th:block th:insert="fragments/layout :: main-content-end" />
 </main>
