--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/fragments/competition-setup-section-elements.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/fragments/competition-setup-section-elements.html
@@ -26,6 +26,7 @@
                 <th:block th:if="${question.appendix != null}">
                     <dt class="column-third">Appendix</dt>
                     <dd class="column-two-thirds" th:if="${question.appendix}">Yes</dd>
+                    <dd class="column-two-thirds" th:if="${question.allowedFileTypes}">application/pdf</dd>
                     <dd class="column-two-thirds" th:unless="${question.appendix}">No</dd>
                 </th:block>
             </dl>
@@ -199,9 +200,17 @@
             <div class="form-group" th:if="${question.appendix != null}">
                 <fieldset class="inline">
                     <legend class="form-label-bold">Appendix</legend>
-                    <div class="multiple-choice">
-                        <input id="appendix-yes" th:name="question.appendix" th:checked="${question.appendix}" value="1" type="radio" />
+                    <div class="multiple-choice" data-target="allowedFileTypesDiv">
+                        <input id="appendix-yes" th:name="question.appendix" th:checked="${question.appendix}" value="1" type="radio"/>
                         <label for="appendix-yes">Yes</label>
+                    </div>
+                    <div id="allowedFileTypesDiv">
+                        <ul>
+                            <li th:each="fileTypeCategory : ${question.getSupportedTypeCategories()}">
+                                <input type="checkbox" th:field="*{question.allowedFileTypes}" th:value="${fileTypeCategory.displayName}" />
+                                <label th:for="${#ids.prev('question.allowedFileTypes')}" th:text="${fileTypeCategory.displayName}">PDF</label>
+                            </li>
+                        </ul>
                     </div>
                     <div class="multiple-choice">
                         <input id="appendix-no" th:name="question.appendix" th:checked="${!question.appendix}" value="0" type="radio" />
