--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/fragments/applicant-view.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/fragments/applicant-view.html
@@ -764,7 +764,7 @@
         <h2>Project summary</h2>
 
         <div class="question">
-            <div class="form-group">
+            <div class="form-group extra-margin">
                 <p>The Project aims to identify, isolate and correct an issue that has hindered progress in this field for a number of years. Identification will involve the university testing conditions to determine the exact circumstance of the Issue. Once Identification has been assured we will work to Isolate the issue but replicating the circumstances in which it occurs within a laboratory environment. After this we will work with our prototyping partner to create a tool to correct the issue. Once tested and certified this will be rolled out to mass production.</p>
             </div>
         </div>
@@ -772,7 +772,7 @@
         <h2>Public description</h2>
 
             <div class="question">
-                <div class="form-group">
+                <div class="form-group extra-margin">
                     <p>Wastage in our industry can be attributed in no small part to one issue. To date businesses have been reluctant to tackle that problem and instead worked around it. That has stifled progress.</p>
                     <p>The end result of our project will be a novel tool to manage the issue and substantially reduce the wastage caused by it.</p>
                 </div>
