--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/finance/finance.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/finance/finance.html
@@ -591,7 +591,7 @@
                 <input type="hidden" value="£0" data-calculation-rawvalue="0" th:id="${'section-total-'+subSection.id+'-labour-cost-none'}"/>
             </div>
 
-            <div id="overhead-default-percentage">
+            <div class="form-group" id="overhead-default-percentage">
                 <h3 class="heading-medium">20% of labour costs</h3>
                 <p>There is no need to provide any further supporting documentation or calculations. Actual costs can be claimed up to a maximum of this calculated figure.</p>
                 <h4 class="alignright section-total-summary">
@@ -647,7 +647,7 @@
                            th:value="${overheadRate.equals(T(org.innovateuk.ifs.finance.resource.cost.OverheadRateType).CUSTOM_RATE)} ? '£' + ${#numbers.formatInteger(costCategory?.total,0, 'DEFAULT')} : '£0'"/>
                 </div>
             </div>
-            <div th:if="${overheadCosts?.useTotalOption}" id="overhead-total">
+            <div class="form-group" th:if="${overheadCosts?.useTotalOption}" id="overhead-total">
                 <h3 class="heading-medium">Calculate overheads</h3>
                 <p>
                     If you feel your overheads are higher than 20% you may calculate a value using the Innovate UK model in the spreadsheet available below.
