IFS-2015-PF-BankDetails-Action
Content change - After confirmation from Jeremy.

Change-Id: I7b818769d10a6a29a8d4ca8baf67686e53904a7f

--- a/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/competition-pending-bank-details.html
+++ b/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/competition-pending-bank-details.html
@@ -41,7 +41,7 @@
         </div>
     </th:block>
     <th:block th:unless="${model.pendingBankDetails.size() > 0}">
-        There are no outstanding Bank Details to be approved.
+        There are no bank details awaiting approval.
     </th:block>
     <th:block th:insert="fragments/layout :: main-content-end" />
 </main>
