--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessment/assessment-submit-confirm.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessment/assessment-submit-confirm.html
@@ -20,6 +20,7 @@
                 <div>
                     <input type="hidden" th:field="*{assessmentIds}" />
                     <button type="submit" class="button">Yes I want to submit the assessments</button>
+                    <a class="button button-clear" th:href="@{/assessor/dashboard/competition/{id}(id=${competitionId})}">Cancel</a>
                 </div>
             </form>
         </main>
