IFS-2174 Prot GOL

--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/1595-internal-gol.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/1595-internal-gol.html
@@ -6,7 +6,7 @@
 
 </head>
 
-<body>
+<body class="wide-page">
 
 <th:block th:insert="prototypes/fragments/layout :: prototype-nav" />
 <th:block th:insert="fragments/layout :: body-start" />
