IFS-837 Fix bug with competition code validation

--- a/ifs-web-service/ifs-web-core/src/main/resources/static/sass/components/_forms.scss
+++ b/ifs-web-service/ifs-web-core/src/main/resources/static/sass/components/_forms.scss
@@ -27,6 +27,11 @@ div {
   &[disabled],
   &.readonly {
     @extend %read-only;
+
+    &.form-control-error {
+      @include box-shadow(none);
+      border: 4px solid $error-colour;
+    }
   }
 }
 
