IFS-2015-PF-BankDetails-Action
Implemented Sophie's review comment.

Change-Id: Ia0e31ed1db0715791881d7abc35b45f1e81358e1

--- a/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/competition-pending-bank-details.html
+++ b/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/competition-pending-bank-details.html
@@ -33,7 +33,7 @@
                     <td th:text="${pendingBankDetail.applicationId}"></td>
                     <td th:text="${pendingBankDetail.competitionName}"></td>
                     <td th:text="${pendingBankDetail.projectName}"></td>
-                    <td><a th:text="${pendingBankDetail.organisationName}" th:href="@{/project/{projectId}/review-all-bank-details(projectId=${pendingBankDetail.projectId})}"></a></td>
+                    <td><a th:text="${pendingBankDetail.organisationName}" th:href="@{/project/{projectId}/organisation/{organisationId}/review-bank-details(projectId=${pendingBankDetail.projectId}, organisationId=${pendingBankDetail.organisationId})}"></a></td>
 
                 </tr>
                 </tbody>
