--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/dashboard/projectSetup.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/dashboard/projectSetup.html
@@ -27,7 +27,7 @@
                     panelComps=${model.competitions.get(T(org.innovateuk.ifs.competition.resource.CompetitionStatus).FUNDERS_PANEL)}">
             <h2 class="heading-medium" th:text="'Project setup ('+${model.counts.projectSetupCount}+')'"></h2>
 
-            <a href="/project-setup-management/competitions/status/pending-bank-details-approvals">Bank details</a>
+            <a href="/project-setup-management/competitions/status/pending-bank-details-approvals"><span th:text="'Bank details (' + ${model.countBankDetails} + ')'">2</span></a>
 
             <ul class="list-overview extra-margin">
                 <!-- Deliberate separation from PS list.  Check with BAs if this should be categorised like in live tab for clarity of status -->
