IFS-2015-PF-BankDetails-Action
Content changes after discussion with Jeremy.

Change-Id: Icd5d1dd8e5a731690722100ef7d6a36ef4accae7

--- a/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/competition-pending-bank-details.html
+++ b/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/competition-pending-bank-details.html
@@ -23,9 +23,9 @@
                 <thead>
                 <tr>
                     <th scope="col">Application number</th>
-                    <th scope="col">Competition Name</th>
-                    <th scope="col">Project Title</th>
-                    <th scope="col">Awaiting Approval</th>
+                    <th scope="col">Competition name</th>
+                    <th scope="col">Project title</th>
+                    <th scope="col">Awaiting approval</th>
                 </tr>
                 </thead>
                 <tbody>
