IFS-1191 - Change to date pattern. Format day change from 'dd' to 'd' throughout the system to stop IFS from enforcing the leading 0 on single digit dates.

--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-panel-invite.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-panel-invite.html
@@ -20,7 +20,7 @@
             <p>You are invited to assess the competition <strong th:text="|'${model.competitionName}'|">'Technology inspired'</strong>.</p>
 
             <section class="boxed">
-                <h2 class="heading-medium no-margin" th:text="|${#temporals.format(model.panelDate, 'dd MMMM yyyy')}: assessment panel|">
+                <h2 class="heading-medium no-margin" th:text="|${#temporals.format(model.panelDate, 'd MMMM yyyy')}: assessment panel|">
                     21 March 2017: assessment panel
                 </h2>
                 <p>Are you are available to take part in this assessment panel? <br>
