--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/fragments/elements.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/fragments/elements.html
@@ -141,7 +141,7 @@
         <th:block th:if="${date.toLocalDate().equals(today)}" th:text="today" />
         <th:block th:if="${date.toLocalDate().equals(today.minusDays(1))}" th:text="yesterday" />
         <th:block th:unless="${date.toLocalDate().equals(today)} or ${date.toLocalDate().equals(today.minusDays(1))}">
-          <th:block th:text="${#temporals.format(date, 'dd MMMM')}"/>
+          <th:block th:text="${#temporals.format(date, 'd MMMM')}"/>
         </th:block>
     </th:block>
     <th:block th:text="${#strings.toLowerCase(#temporals.format(date, 'h:mma'))}"/>
