--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-competition-invite.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-competition-invite.html
@@ -20,13 +20,13 @@
             <p>You are invited to assess the competition <strong th:text="|'${model.competitionName}'|">'Technology inspired'</strong>.</p>
 
             <section class="boxed">
-                <h2 class="heading-medium no-margin" th:text="|${#temporals.format(model.acceptsDate, 'dd MMMM yyyy')} to ${#temporals.format(model.deadlineDate, 'dd MMMM yyyy')}: Assessment period|">
+                <h2 class="heading-medium no-margin" th:text="|${#temporals.format(model.acceptsDate, 'd MMMM yyyy')} to ${#temporals.format(model.deadlineDate, 'd MMMM yyyy')}: Assessment period|">
                     21 March 2017 to 28 March 2017: Assessment period
                 </h2>
                 <p>This is the given timescale for reading, scoring, providing written comments and submitting your assessments in our online service. Each assessor could receive up to 10 proposals to assess, however the number could be less dependent on how many applications have been submitted. Our assessment fee for this competition is &pound;<th:block th:text="${#numbers.formatInteger(model.assessorPay,0, 'DEFAULT')}">100</th:block> per application.</p>
 
                 <p th:if="${model.briefingDate}" th:text="|The assessor webinar briefing will last one hour,
-                    taking place on ${#temporals.format(model.briefingDate, 'dd MMMM')}.|"></p>
+                    taking place on ${#temporals.format(model.briefingDate, 'd MMMM')}.|"></p>
             </section>
 
             <section>
