--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-competition-upcoming.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-competition-upcoming.html
@@ -15,7 +15,7 @@
             <th:block th:insert="fragments/layout :: page-title" th:with="pageTitle=|Upcoming competition '${model.competitionName}'|,size='heading-xlarge'" />
             <p th:text="|You have agreed to be an assessor for the upcoming competition '${model.competitionName}'|">You have agreed to be an assessor for the upcoming competition 'My Competition'</p>
 
-            <section class="boxed" th:with="dateFormat=${model.assessmentPeriodDateFrom.year!=model.assessmentPeriodDateTo.year} ? 'dd MMMM yyyy' : 'dd MMMM'">
+            <section class="boxed" th:with="dateFormat=${model.assessmentPeriodDateFrom.year!=model.assessmentPeriodDateTo.year} ? 'd MMMM yyyy' : 'd MMMM'">
                 <h2 class="heading-medium no-margin" th:text="|${#temporals.format(model.assessmentPeriodDateFrom,dateFormat)} to ${#temporals.format(model.assessmentPeriodDateTo,dateFormat)}: Assessment period|"></h2>
                 <p>Assessment period for reading, scoring, providing written comments and submitting to our online
                     service. Each assessor could receive up to 10 applications to assess. This depends on the
