--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition/submitted-applications.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition/submitted-applications.html
@@ -17,7 +17,7 @@
             <ul class="grid-row extra-margin-bottom">
                 <li class="column-quarter">
                     <div class="highlight-panel highlight-panel-padded">
-                        <span class="heading-medium" th:text="${#temporals.format(model.assessmentDeadline, 'dd MMMM Y')}">17 November 2016</span>
+                        <span class="heading-medium" th:text="${#temporals.format(model.assessmentDeadline, 'd MMMM Y')}">17 November 2016</span>
                         <br />
                         <small>Assessment deadline</small>
                     </div>
