--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/application-form.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/application-form.html
@@ -14,7 +14,7 @@
             <th:block th:insert="fragments/layout :: header-sub" th:with="currentApplication=${model.application},linkTitle=${backTitle},linkClass='link-back',linkUrl=${backURL}" />
 
             <div th:if="${#fields.hasErrors('${form.*}')}" class="error-summary" role="alert" aria-labelledby="error-summary-heading" tabindex="-1">
-                <h2 class="heading-medium error-summary-heading"  id="error-summary-heading">There is a problem on this page</h2>
+                <h2 class="heading-medium error-summary-heading"  id="error-summary-heading">There is a problem on this page.</h2>
 
                 <ul class="error-summary-list">
                     <li th:each="err : ${#fields.detailedErrors('${form.*}')}">
