--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessment/application-question.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessment/application-question.html
@@ -13,7 +13,7 @@
             <th:block th:insert="fragments/assessment :: assessment-header-deadline-sub (linkTitle='Back to your assessment overview',linkClass='link-back',linkUrl=@{${navigation.overviewUrl}},daysPercentage=${model.daysLeftPercentage},daysLeft=${model.daysLeft})" />
 
             <div th:if="${#fields.hasErrors('${form.*}')}" class="error-summary" role="alert" aria-labelledby="error-summary-heading" tabindex="-1">
-                <h2 class="heading-medium error-summary-heading" id="error-summary-heading">There is a problem on this page</h2>
+                <h2 class="heading-medium error-summary-heading" id="error-summary-heading">There is a problem on this page.</h2>
                 <th:block th:insert="fragments/elements :: error-summary-list(form)" />
             </div>
 
