--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/application/reinstate-ineligible-application-confirm.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/application/reinstate-ineligible-application-confirm.html
@@ -14,7 +14,7 @@
     <th:block th:insert="fragments/layout :: page-title" th:with="pageTitle='Reinstate application',subTitle=${model.applicationName},size='heading-xlarge'" />
 
     <div th:if="${#fields.hasErrors('${form.*}')}" class="error-summary" role="alert" aria-labelledby="error-summary-heading" tabindex="-1">
-        <h2 class="heading-medium error-summary-heading" id="error-summary-heading">There is a problem on this page</h2>
+        <h2 class="heading-medium error-summary-heading" id="error-summary-heading">There is a problem on this page.</h2>
         <th:block th:insert="fragments/elements :: error-summary-list(form)" />
     </div>
 
