--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/comp-mgt-manage-funding-applications.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/comp-mgt-manage-funding-applications.html
@@ -12,7 +12,7 @@
     <th:block th:insert="fragments/layout :: header-sub" th:with="linkTitle='Competition',linkClass='link-back',linkUrl=@{/competition/{competitionId}(competitionId=${model.competitionId})}" />
 
     <div th:if="${#fields.hasErrors('${fundingNotificationFilterForm.*}')}" class="error-summary" role="alert" aria-labelledby="error-summary-heading" tabindex="-1">
-        <h2 class="heading-medium error-summary-heading" id="error-summary-heading">There is a problem on this page</h2>
+        <h2 class="heading-medium error-summary-heading" id="error-summary-heading">There is a problem on this page.</h2>
         <th:block th:insert="fragments/elements :: error-summary-list(fundingNotificationFilterForm)" />
     </div>
 
