--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition/setup/question.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition/setup/question.html
@@ -15,7 +15,7 @@
     <th:block th:insert="fragments/layout :: header-sub" th:with="linkTitle='Application',linkClass='link-back',linkUrl=@{/competition/setup/{competitionId}/section/application/landing-page(competitionId=${model.general.competition.id})}" th:unless="${model.general.currentSectionIsHome()}" />
 
     <div th:if="${#fields.hasErrors('${competitionSetupForm.question.*}')}" class="error-summary" role="alert" aria-labelledby="error-summary-heading" tabindex="-1">
-        <h2 class="heading-medium error-summary-heading" id="error-summary-heading">There is a problem on this page</h2>
+        <h2 class="heading-medium error-summary-heading" id="error-summary-heading">There is a problem on this page.</h2>
         <th:block th:insert="fragments/elements :: error-summary-list(competitionSetupForm.question)" />
     </div>
 
