--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/fractal-components/task-lists/applicant-application-overview.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/fractal-components/task-lists/applicant-application-overview.html
@@ -19,6 +19,9 @@
         {{ render '@assign-list' }}
       </div>
     </div>
+    <div class="task-status-incomplete">
+      <span>Incomplete</span>
+    </div>
   </li>
 
   <li>
@@ -33,6 +36,9 @@
         </div>
         {{ render '@assign-list' }}
       </div>
+    </div>
+    <div class="task-status-incomplete">
+      <span>Incomplete</span>
     </div>
   </li>
 
