--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/application/single-section-details.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/application/single-section-details.html
@@ -20,17 +20,14 @@
         <!--/* lead */-->
         <th:block th:if="${userIsLeadApplicant}">
             <th:block th:insert="question-type/form-elements :: assign-buttons (${model.section.assignButtonViewModels.get(question.id)})" th:with="hideAssignedTo=${true}" />
-            <div class="task-status-incomplete">
-              <span>Incomplete</span>
-            </div>
         </th:block>
           <!--/* collabr */-->
-        <th:block th:if="${!userIsLeadApplicant}">
+        <th:block th:unless="${userIsLeadApplicant}">
             <th:block th:insert="question-type/form-elements :: assigned-to (${model.section.assignButtonViewModels.get(question.id)})" />
-            <div class="task-status-incomplete">
-              <span>Incomplete</span>
-            </div>
         </th:block>
+        <div class="task-status-incomplete">
+          <span>Incomplete</span>
+        </div>
       </th:block>
       <div th:if="${model.completed.completedOrMarkedAsComplete(question, section)}"
            class="task-status-complete">
