IFS-1928 - Cancel added to no-JS submit documents template. IFS-1928 - Cleanup to no-JS other docs and bank details submit pages to make them GDS compliant.

--- a/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/bank-details-confirm.html
+++ b/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/bank-details-confirm.html
@@ -21,10 +21,10 @@
         <hr />
         <div class="grid-row">
             <div class="column-half">
-                <a th:href="@{/project/{id}/bank-details(id=${project.id})}" class="js-close buttonlink">Cancel</a>
-            </div>
-            <div class="column-half alignright-button">
                 <button class="button">Submit</button>
+            </div>
+            <div class="column-half alignright">
+                <a th:href="@{/project/{id}/bank-details(id=${project.id})}" class="js-close buttonlink">Cancel</a>
             </div>
         </div>
     </form>
