--- a/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/monitoring-officer-confirm.html
+++ b/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/monitoring-officer-confirm.html
@@ -31,7 +31,14 @@
 
 				<h2 class="heading-large">Assign Monitoring Officer</h2>
         <p>This will notify the Project Manager and Monitoring Officer of this appointment. The Monitoring Officer will be visible to all members of the consortium.</p>
-        <button class="button" name="submit-app-details">Assign Monitoring Officer</button>
+        <div class="grid-row">
+            <div class="column-half">
+                <button class="button" name="submit-app-details">Assign Monitoring Officer</button>
+            </div>
+            <div class="column-half alignright">
+                <a th:href="@{/project/{projectId}/monitoring-officer(projectId=${model.projectId})}" class="js-close buttonlink">Cancel</a>
+            </div>
+        </div>
     </form>
 
 	<th:block th:insert="fragments/layout :: main-content-end" />
