--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/4151-admin-competition-dash.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/4151-admin-competition-dash.html
@@ -6,7 +6,7 @@
 
 </head>
 
-<body class="full-width comp-dashboard">
+<body class="comp-dashboard wide-page">
 
 <th:block th:insert="prototypes/fragments/layout :: prototype-nav" />
 <th:block th:insert="fragments/layout :: body-start" />
