Cover coverage - Test added for PublicContentStatusText IFS-1928 - Removal of js-close to confirm templates.

--- a/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/bank-details-confirm.html
+++ b/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/bank-details-confirm.html
@@ -24,7 +24,7 @@
                 <button class="button">Submit</button>
             </div>
             <div class="column-half alignright">
-                <a th:href="@{/project/{id}/bank-details(id=${project.id})}" class="js-close buttonlink">Cancel</a>
+                <a th:href="@{/project/{id}/bank-details(id=${project.id})}" class="buttonlink">Cancel</a>
             </div>
         </div>
     </form>
