--- a/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/other-documents-confirm.html
+++ b/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/other-documents-confirm.html
@@ -20,7 +20,7 @@
                 <button class="button" name="submit-other-documents">Submit</button>
             </div>
             <div class="column-half alignright">
-                <a th:href="@{/project/{projectId}/partner/documents(projectId=${model.projectId})}" class="js-close buttonlink">Cancel</a>
+                <a th:href="@{/project/{projectId}/partner/documents(projectId=${model.projectId})}" class="buttonlink">Cancel</a>
             </div>
         </div>
     </form>
