--- a/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/monitoring-officer-confirm.html
+++ b/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/monitoring-officer-confirm.html
@@ -36,7 +36,7 @@
                 <button class="button" name="submit-app-details">Assign Monitoring Officer</button>
             </div>
             <div class="column-half alignright">
-                <a th:href="@{/project/{projectId}/monitoring-officer(projectId=${model.projectId})}" class="js-close buttonlink">Cancel</a>
+                <a th:href="@{/project/{projectId}/monitoring-officer(projectId=${model.projectId})}" class="buttonlink">Cancel</a>
             </div>
         </div>
     </form>
